adjust gateway