@@ -37,6 +37,8 @@ import org.springframework.web.server.WebFilter;
 import org.springframework.web.server.WebFilterChain;
 import reactor.core.publisher.Mono;
 
+import java.util.stream.Collectors;
+
 public class WebFluxLogFilter implements WebFilter, Ordered {
     final Logger log = LoggerFactory.getLogger(WebFluxLogFilter.class);
 
@@ -58,13 +60,13 @@ public class WebFluxLogFilter implements WebFilter, Ordered {
                         .getHeaders()
                         .entrySet()
                         .stream()
-                        .toList());
+                        .collect(Collectors.toList()));
                 log.info("Response: {}", exchange.getResponse().getStatusCode());
                 log.info("Response Headers: {}", exchange.getResponse()
                         .getHeaders()
                         .entrySet()
                         .stream()
-                        .toList());
+                        .collect(Collectors.toList()));
                 log.info("\n:: End Request Log ::");
             }
         });
